# KillerQueenV7

./: .gitignore  README.md  install.sh
kq-core/: README.md  SOUL.md  config.yaml  pyproject.toml
kq-core/kb_sources/: __init__.py
kq-core/kb_sources/references/: 0day-exploit-analysis-reference.md  DEEP-READ-COMPLETION-2026-06-06.md  additional-malware-sources.md  ai-red-teaming-reference.md  attack-priority-ranking.md  awesome-redteam-repos-complete.md  blocked-sources-recovered.md  books-exhaustive.md  botasaurus-exhaustive.md  browser-exploit-exhaustive.md  browser-exploitation-reference.md  browser-social-wireless-reference.md  browser-windows-exploit-new.md  c2-framework-source-analysis.md  certification-reference-books.md  cloud-infrastructure-attacks-reference.md  cloudflare-bypass-techniques.md  command-cheat-sheet.md  conference-attack-techniques.md  consolidated-h1-rce.md  consolidated-h1-sqli.md  consolidated-h1-ssrf.md  defensive-forensic-reference.md  (+38 more)
kq-core/kq_core/: __init__.py  audit.py  chain.py  cli.py  config.py  diagram.py  embeddings.py  engagement.py  extract.py  findings.py  guard.py  ingest.py  learning.py  mcp_server.py  memory.py  migrate.py  orchestration.py  report.py  scope.py  skillgen.py  store.py  triage.py  util.py  vectors.py
kq-core/tests/: conftest.py  test_arsenal.py  test_chain.py  test_confidence_model.py  test_digest_render.py  test_kb_ingest.py  test_learning_dedup.py  test_mcp_server_smoke.py  test_orchestration.py  test_recall_hybrid.py  test_report.py  test_scope_guard.py  test_store_migration.py  test_triage.py
(+204 files in other folders)
